# RAG_Evolution_Lab

./: .gitignore  CLAUDE.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude/agents/: chunking-experimenter.md  eval-runner.md  metrics-aggregator.md
.claude/commands/: blog-draft.md  compare-stages.md  eval-stage.md  ingest.md  promote-stage.md
notebooks/: 00_data_preparation.ipynb  RESULTS.md  stage_comparison.ipynb
results/stage_0/: 20260516_160053.json  20260519_035308.json
results/stage_1/: 20260518_040449.json  20260519_052018.json
results/stage_2/: 20260518_050953.json  20260518_052915.json  20260518_053235.json  20260518_053338.json  20260518_054831_all.json  20260518_054831_no_hybrid.json  20260518_054831_no_rewriting.json  20260518_083036_no_reranker.json  20260518_084630_no_sem_chunk.json  20260518_090127_dense_only.json  20260519_052716.json
results/stage_3/: 20260518_111725.json  20260519_070534.json
results/stage_4/: 20260519_150234_graph_only.json  20260519_151223.json
scripts/: download_arxiv.py  log_latency.py  verify_no_secrets.sh
shared/eval/: datasets.py  harness.py  metrics.py  reporter.py
stage_0/: config.toml  eval.py  indexer.py  retriever.py
stage_1/: config.toml  embedder.py  eval.py  generator.py  indexer.py  pipeline.py  retriever.py
stage_2/: chunker.py  config.toml  harness.py  hybrid_retriever.py  indexer.py  pipeline.py  query_rewriter.py  reranker.py
stage_3/: agents.py  config.toml  graph.py  harness.py  state.py
stage_4/: config.toml  graph_builder.py  harness.py  retriever.py
(+15 files in other folders)
