[project]
name = "rag-evolution-lab"
version = "0.1.0"
description = "9-stage RAG architecture benchmark on MacBook M3 36GB"
requires-python = ">=3.11"
dependencies = [
    "rank-bm25>=0.2",
    "qdrant-client>=1.13",
    "sentence-transformers>=3.5",
    "FlagEmbedding>=1.4",
    "langgraph>=0.3",
    "langchain>=0.3",
    "ragas>=0.2",
    "ollama>=0.4",
    "datasets>=2.19",
    "psutil>=5.9",
    "numpy>=1.26",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["rag_evolution_lab"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
